# gigacrawl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: linkedin.rs  main.rs  signal.rs  twitter.rs
xlsx/: indc.xlsx
