[package]
name = "gigacrawl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datacenter_chart"
path = "src/main.rs"

[[bin]]
name = "datacenter_pdf"
path = "src/bin/datacenter_pdf.rs"

[[bin]]
name = "spacex_exposure"
path = "src/bin/spacex_exposure.rs"

[dependencies]
image = "0.25"
ab_glyph = "0.2"
printpdf = "0.9.1"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
urlencoding = "2"
open = "5"
hmac = "0.12"
sha1 = "0.10"

[profile.release]
opt-level = 2
