[package]
name = "gigacrawl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datacenter_chart"
path = "src/main.rs"

[[bin]]
name = "datacenter_pdf"
path = "src/bin/datacenter_pdf.rs"

[[bin]]
name = "spacex_exposure"
path = "src/bin/spacex_exposure.rs"

[dependencies]
image = "0.25"
ab_glyph = "0.2"
printpdf = "0.9.1"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
urlencoding = "2"
open = "5"
hmac = "0.12"
sha1 = "0.10"
# Signal (src/signal.rs): presage is the Rust client stack on top of the
# official libsignal crates; git-only (Signal publishes nothing to crates.io).
presage = { git = "https://github.com/whisperfish/presage", rev = "22251cc2d4503240df82aa27f1ba226324c05a29" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "22251cc2d4503240df82aa27f1ba226324c05a29" }
tokio = { version = "1.48", features = ["rt", "macros"] }
futures = "0.3"
qr2term = "0.3"
qrcode = "0.14"
hex = "0.4"

# Required by presage/libsignal — [patch] only applies at the workspace root,
# so presage's own patches must be repeated here (copied from its Cargo.toml).
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc" }

[profile.release]
opt-level = 2
